# Job_database

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: database_classes.py  hh_api.py  json_classes.py
