[tool.poetry]
name = "job-database-course6"
version = "0.1.0"
description = ""
authors = ["Dmitrii Bashmakov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
